	 depend on libdsk (Stuart).
20071003 disk/wd1770.c: small tidyups.
20071003 sound.c: reindent (Stuart Brady).
20071005 disk/{Makefile.am,plusd.[ch],wd_fdc.[ch]},event.[ch]: rename
	 wd1770.[ch] to wd_fdc.[ch], and s/wd1770/wd_fdc/ (Stuart).
20071006 configure.in: amiga should be detected as amigaos instead of just
         amiga (Thanks, Chris Young) (Fred).
20071007 roms/{plus3e-0.rom,roms/plus3e-1.rom,roms/plus3e-2.rom}: update to
         v1.31 of the +3e ROMs (feature request #1808657) (Fred).
20071016 disk/wd_fdc.h,event.c,profile.c,sound/alsasound.c: warnings removal.
20071016 disk/{crc.c,disk.c,fdd.c,plusd.c,wd_fdc.c}: remove unnecessary
	 header files.
20071019 disk/{fdd.[ch],wd_fdc.[ch]}: remove unnecessary 'direction' member
	 of fdd_t (Stuart).
20071019 disk/{plusd.[ch]},event.[ch]: remove unused event (Stuart).
20071019 disk/disk.c: remove stray semicolon in open_trd() (Stuart).
20071019 Makefile.am,disk/{Makefile.am,beta.[ch],disk.h,wd_fdc.h},event.c,
	 event.h,fuse.c,machines/{pentagon.c,scorpion.c,spec128.c},man/fuse.1,
	 menu.c,menu_data.dat,snapshot.c,tape.c,trdos.[ch],ui/{gtk/gtkui.c,
	 ui.h,win32/{menu_data.[ch],menu_data.rc,win32ui.c}},ui.c,utils.c,
	 widget/menu.c,z80/{coretest.c,z80.c,z80_ops.c}: use new WD FDC code
	 for Beta disk interface emulation (patch #1772618) (Stuart).
20071021 machines/{pentagon.c,scorpion.c,spec128.c,specplus2.c,specplus2a.c,
	 specplus3.c, specplus3e.c}: tidy up a few Valgrind reported errors.
20071021 ay.c: initialise on machine reset (prevents a lot of Valgrind
	 warnings on the 2068 machines).
20071021 disk/{disk.c,plusd.c,wd_fdc.c}: formatting fixes (Stuart).
20071021 disk/{disk.c,fdd.c,wd_fdc.c}: more formatting fixes (Stuart).
20071021 disk/wd_fdc.c: remove fdc_list (part of patch #1779138).
20071021 disk/wd_fdc.c,event.[ch]: add timeout event (part of patch #1779138)
	 (Gergely Szasz).
20071022 Makefile.am,bitmap.h,disk/{disk.c,fdd.c}: add and use bitmap functions
	 for 'clocks' bitmaps (Stuart).