@@ -36,6 +36,16 @@
 #include "wd_fdc.h"
 
 static void statusbar_update( int busy );
+static void crc_preset( wd_fdc *f );
+static void crc_add( wd_fdc *f, wd_fdc_drive *d );
+static int read_id( wd_fdc *f );
+static int read_datamark( wd_fdc *f );
+static void seek_id( wd_fdc *f );
+static void wd_fdc_seek_verify( wd_fdc *f );
+static void wd_fdc_type_i( wd_fdc *f );
+static void wd_fdc_type_ii( wd_fdc *f );
+static void wd_fdc_type_iii( wd_fdc *f );
+static int wd_fdc_spinup( wd_fdc *f, libspectrum_byte b );
 
 void
 wd_fdc_master_reset( wd_fdc *f )
@@ -62,7 +72,7 @@ wd_fdc_master_reset( wd_fdc *f )
 
 }
 
-wd_fdc*
+wd_fdc *
 wd_fdc_alloc_fdc( wd_type_t type )
 {
   wd_fdc *fdc = malloc( sizeof( *fdc ) );
@@ -149,8 +159,17 @@ wd_fdc_reset_datarq( wd_fdc *f )
   }
 }
 
-#define CRC_PRESET f->crc = 0xffff
-#define CRC_ADD f->crc = crc_fdc( f->crc, d->fdd.data & 0xff )
+static void
+crc_preset( wd_fdc *f )
+{
+  f->crc = 0xfff;
+}
+
+static void
+crc_add( wd_fdc *f, wd_fdc_drive *d )
+{
+  f->crc = crc_fdc( f->crc, d->fdd.data & 0xff );
+}
 
 /* return 0 if found an ID 
    return 1 if not found ID
@@ -166,16 +185,16 @@ read_id( wd_fdc *f )
     f->rev = 2;
 
   while( f->rev > 0 ) {
-    CRC_PRESET;
+    crc_preset( f );
     fdd_read_write_data( &d->fdd, FDD_READ ); if( d->fdd.index ) f->rev--;
-    CRC_ADD;
+    crc_add(f, d);
     if( f->dden ) {	/* double density (MFM) */
       if( d->fdd.data == 0xffa1 ) {
-	fdd_read_write_data( &d->fdd, FDD_READ ); CRC_ADD;
+	fdd_read_write_data( &d->fdd, FDD_READ ); crc_add(f, d);
 	if( d->fdd.index ) f->rev--;
 	if( d->fdd.data != 0xffa1 )
 	  continue;
-	fdd_read_write_data( &d->fdd, FDD_READ ); CRC_ADD;
+	fdd_read_write_data( &d->fdd, FDD_READ ); crc_add(f, d);
 	if( d->fdd.index ) f->rev--;
 	if( d->fdd.data != 0xffa1 )
 	  continue;
@@ -183,7 +202,8 @@ read_id( wd_fdc *f )
 	continue;
       }
     }
-    fdd_read_write_data( &d->fdd, FDD_READ ); CRC_ADD; if( d->fdd.index ) f->rev--;
+    fdd_read_write_data( &d->fdd, FDD_READ ); crc_add(f, d);
+    if( d->fdd.index ) f->rev--;
     if( f->dden ) {	/* double density (MFM) */
       if( d->fdd.data != 0x00fe )
 	continue;
@@ -191,17 +211,23 @@ read_id( wd_fdc *f )
       if( d->fdd.data != 0xfffe )
 	continue;
     }
-    fdd_read_write_data( &d->fdd, FDD_READ ); CRC_ADD; if( d->fdd.index ) f->rev--;
+    fdd_read_write_data( &d->fdd, FDD_READ ); crc_add(f, d);
+    if( d->fdd.index ) f->rev--;
     f->id_track = d->fdd.data;
-    fdd_read_write_data( &d->fdd, FDD_READ ); CRC_ADD; if( d->fdd.index ) f->rev--;
+    fdd_read_write_data( &d->fdd, FDD_READ ); crc_add(f, d);
+    if( d->fdd.index ) f->rev--;
     f->id_head = d->fdd.data;
-    fdd_read_write_data( &d->fdd, FDD_READ ); CRC_ADD; if( d->fdd.index ) f->rev--;
+    fdd_read_write_data( &d->fdd, FDD_READ ); crc_add(f, d);
+    if( d->fdd.index ) f->rev--;
     f->id_sector = d->fdd.data;
-    fdd_read_write_data( &d->fdd, FDD_READ ); CRC_ADD; if( d->fdd.index ) f->rev--;
+    fdd_read_write_data( &d->fdd, FDD_READ ); crc_add(f, d);
+    if( d->fdd.index ) f->rev--;
     f->id_length = d->fdd.data;
     f->sector_length = 0x80 << d->fdd.data; 
-    fdd_read_write_data( &d->fdd, FDD_READ ); CRC_ADD; if( d->fdd.index ) f->rev--;
-    fdd_read_write_data( &d->fdd, FDD_READ ); CRC_ADD; if( d->fdd.index ) f->rev--;
+    fdd_read_write_data( &d->fdd, FDD_READ ); crc_add(f, d);
+    if( d->fdd.index ) f->rev--;
+    fdd_read_write_data( &d->fdd, FDD_READ ); crc_add(f, d);
+    if( d->fdd.index ) f->rev--;
     if( f->crc != 0x0000 ) {
       f->status_register |= WD_FDC_SR_CRCERR;
       f->id_mark = WD_FDC_AM_ID;
@@ -235,8 +261,8 @@ read_datamark( wd_fdc *f )
       return 1;				/* something wrong... */
     } 
     for( ; i > 0; i-- ) {
-      CRC_PRESET;
-      fdd_read_write_data( &d->fdd, FDD_READ ); CRC_ADD;
+      crc_preset( f );
+      fdd_read_write_data( &d->fdd, FDD_READ ); crc_add(f, d);
       if( d->fdd.data == 0x00 )
 	continue;
 
@@ -246,11 +272,11 @@ read_datamark( wd_fdc *f )
       return 1;
     }
     for( i = d->fdd.data == 0xffa1 ? 2 : 3; i > 0; i-- ) {
-      fdd_read_write_data( &d->fdd, FDD_READ ); CRC_ADD;
+      fdd_read_write_data( &d->fdd, FDD_READ ); crc_add(f, d);
       if( d->fdd.data != 0xffa1 )
 	return 1;
     } 
-    fdd_read_write_data( &d->fdd, FDD_READ ); CRC_ADD;
+    fdd_read_write_data( &d->fdd, FDD_READ ); crc_add(f, d);
     if( d->fdd.data < 0x00f8 || d->fdd.data > 0x00fb )	/* !fb deleted mark */
       return 1;
     if( d->fdd.data != 0x00fb )
@@ -271,8 +297,8 @@ read_datamark( wd_fdc *f )
       return 1;				/* something wrong... */
     } 
     for( ; i > 0; i-- ) {
-      CRC_PRESET;
-      fdd_read_write_data( &d->fdd, FDD_READ ); CRC_ADD;
+      crc_preset( f );
+      fdd_read_write_data( &d->fdd, FDD_READ ); crc_add(f, d);
       if( d->fdd.data == 0x00 )
 	continue;
 
@@ -282,7 +308,7 @@ read_datamark( wd_fdc *f )
       return 1;
     }
     if( i == 0 ) {
-      fdd_read_write_data( &d->fdd, FDD_READ ); CRC_ADD;
+      fdd_read_write_data( &d->fdd, FDD_READ ); crc_add(f, d);
       if( d->fdd.data < 0xfff8 || d->fdd.data > 0xfffb )	/* !fb deleted mark */
 	return 1;
     }
@@ -505,16 +531,16 @@ wd_fdc_type_ii( wd_fdc *f )
     d->fdd.data = 0x00;
     for( i = f->dden ? 12 : 6; i > 0; i-- )	/* write 6/12 zero */
       fdd_read_write_data( &d->fdd, FDD_WRITE );
-    CRC_PRESET;
+    crc_preset( f );
     if( f->dden ) {				/* MFM */
       d->fdd.data = 0xffa1;
       for( i = 3; i > 0; i-- ) {		/* write 3 0xa1 with clock mark */
-	fdd_read_write_data( &d->fdd, FDD_WRITE ); CRC_ADD;
+	fdd_read_write_data( &d->fdd, FDD_WRITE ); crc_add(f, d);
       }
     }
     d->fdd.data = ( f->ddam ? 0x00f8 : 0x00fb ) |
     			( f->dden ? 0x0000 : 0xff00 );	/* write data mark */
-    fdd_read_write_data( &d->fdd, FDD_WRITE ); CRC_ADD;
+    fdd_read_write_data( &d->fdd, FDD_WRITE ); crc_add(f, d);
   }
   event_remove_type( EVENT_TYPE_WD_FDC_TIMEOUT );
   event_add_with_data( tstates + 5 * 200 *		/* 5 revolutions */
@@ -658,8 +684,7 @@ wd_fdc_cr_write( wd_fdc *f, libspectrum_byte b )
 
   wd_fdc_reset_cmdint( f );
 
-  if( ( b & 0xf0 ) == 0xd0 ||
-      ( b & 0xf1 ) == 0xf1    ) {		/* Type IV - Force Interrupt */
+  if( ( b & 0xf0 ) == 0xd0 ) {			/* Type IV - Force Interrupt */
     event_remove_type( EVENT_TYPE_WD_FDC );
     f->status_register &= ~( WD_FDC_SR_BUSY   | WD_FDC_SR_WRPROT |
 			     WD_FDC_SR_CRCERR | WD_FDC_SR_IDX_DRQ );
@@ -760,7 +785,7 @@ wd_fdc_dr_read( wd_fdc *f )
 
   if( f->state == WD_FDC_STATE_READ ) {
     f->data_offset++;				/* count read bytes */
-    fdd_read_write_data( &d->fdd, FDD_READ ); CRC_ADD;	/* read a byte */
+    fdd_read_write_data( &d->fdd, FDD_READ ); crc_add(f, d); /* read a byte */
     if( d->fdd.data > 0xff ) {			/* no data */
       f->status_register |= WD_FDC_SR_RNF;
       f->status_register &= ~WD_FDC_SR_BUSY;
@@ -771,8 +796,8 @@ wd_fdc_dr_read( wd_fdc *f )
     } else {
       f->data_register = d->fdd.data;
       if( f->data_offset == f->sector_length ) {	/* read the CRC */
-	fdd_read_write_data( &d->fdd, FDD_READ ); CRC_ADD;
-	fdd_read_write_data( &d->fdd, FDD_READ ); CRC_ADD;
+	fdd_read_write_data( &d->fdd, FDD_READ ); crc_add(f, d);
+	fdd_read_write_data( &d->fdd, FDD_READ ); crc_add(f, d);
 
 	/* FIXME: make this per-FDC */
 	event_remove_type( EVENT_TYPE_WD_FDC_TIMEOUT );	/* clear the timeout */
@@ -855,7 +880,7 @@ wd_fdc_dr_write( wd_fdc *f, libspectrum_byte b )
   if( f->state == WD_FDC_STATE_WRITE ) {
     d->fdd.data = b;
     f->data_offset++;				/* count bytes read */
-    fdd_read_write_data( &d->fdd, FDD_WRITE ); CRC_ADD;
+    fdd_read_write_data( &d->fdd, FDD_WRITE ); crc_add(f, d);
     if( f->data_offset == f->sector_length ) {	/* write the CRC */
       d->fdd.data = f->crc >> 8;
       fdd_read_write_data( &d->fdd, FDD_WRITE );	/* write crc1 */
@@ -897,7 +922,7 @@ wd_fdc_dr_write( wd_fdc *f, libspectrum_byte b )
       } else if ( b == 0xf6 ) {
 	d->fdd.data = 0xffc2;
       } else {
-	CRC_ADD;
+	crc_add(f, d);
       }
     } else {				/* FM */
       if( b == 0xf7 ) {			/* CRC */
@@ -905,13 +930,13 @@ wd_fdc_dr_write( wd_fdc *f, libspectrum_byte b )
 	fdd_read_write_data( &d->fdd, FDD_WRITE );	/* write crc1 */
 	d->fdd.data = f->crc & 0xff;
       } else if ( b == 0xfe || ( b >= 0xf8 && b <= 0xfb ) ) {
-	CRC_PRESET;			/* preset CRC */
-	CRC_ADD;
+	crc_preset( f );		/* preset CRC */
+	crc_add(f, d);
 	d->fdd.data |= 0xff00;
       } else if ( b == 0xfc ) {
 	d->fdd.data |= 0xff00;
       } else {
-	CRC_ADD;
+	crc_add(f, d);
       }
     }
     fdd_read_write_data( &d->fdd, FDD_WRITE );	/* write a byte */
