@@ -2175,3 +2175,6 @@
 	 (Gergely Szasz).
 20071022 Makefile.am,bitmap.h,disk/{disk.c,fdd.c}: add and use bitmap functions
 	 for 'clocks' bitmaps (Stuart).
+20071022 disk/{disk.c,wd_fdc.c}: remove TR-DOS workaround, fix formatting, add
+	 missing prototypes and use functions instead of macros for CRC_ADD and
+	 CRC_PRESET (Stuart).
